2003-09-13 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslLiteralElement.cs: reduce enumerator allocation.

2003-08-30 Oleg Tkachenko <oleg@tkachenko.com>

	* XslAttribute.cs: output is now done to TextOutputter, which outputs 
	to a StringWriter.
	* XslVariable.cs: output is done to GenericOutputter.

2003-08-21 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XslVariable.cs : use newly introduced XmlNodeWriter.ctor(false) to
	  support for tree fragment, not only for single element.

2003-08-20 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslComment.cs, XslMessage.cs, XslProcessingInsturction.cs:
	Ignore element contnet, per spec. (Oleg)

2003-08-19 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslNumber.cs: Better support for formatting.

2003-08-19 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslNumber.cs: Support for multiple level numbering

2003-08-19 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslNumber.cs: Initial support.

2003-08-19 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslCopyOf.cs, XslLiteralElement: Use namespace support in Outputter.

2003-08-19 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslVariable.cs: sync to API changes.

2003-08-18 Ben Maurer  <bmaurer@users.sourceforge.net>

	* *.cs: Support for xsl:output. (Oleg)

2003-08-17 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslCopyOf.cs: handle default ns
	* XslFallback.cs: implement
	* XslLiteralElement.cs: copy namespaces that were declared.
	* XslTemplateContent.cs: handle ext elements
	
2003-08-17 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslComment.cs, XslTemplateContent.cs: remove dead variables.

2003-08-14  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* XslComment.cs: patch by BenM that implements Evaluate.

2003-08-14 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XslCallTemplates.cs : Forgot to commit ;-)

2003-08-14 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XslApplyTemplates.cs,
	  XslCallTemplate.cs : Should accept other than element content such