@@ -1,3 +1,8 @@
+2003-09-14 Oleg Tkachenko <oleg@tkachenko.com>
+	
+	* XslCopyOf.cs - WriteAttributeString instead of 
+	WriteStartAttribute/WriteString/WriteEndAttribute.
+
 2003-09-13 Ben Maurer  <bmaurer@users.sourceforge.net>
 
 	* XslLiteralElement.cs: reduce enumerator allocation.
